// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`save and share tracking events when press share article url by email 1`] = `
Object {
  "action": "Pressed",
  "attrs": Object {
    "articleHeadline": "test-headline",
    "articleId": "id-123",
    "event_social_action": "share start",
  },
  "component": "ArticleShareOnExpend",
}
`;

exports[`save and share tracking events when press share article url by email: onShareEmail 1`] = `
Array [
  Array [
    Object {
      "articleHeadline": "test-headline",
      "articleId": "id-123",
      "articleUrl": "https://www.thetimes.co.uk/",
    },
  ],
]
`;

exports[`save and share tracking events when press share on facebook 1`] = `
Object {
  "action": "Pressed",
  "attrs": Object {
    "articleHeadline": "test-headline",
    "articleId": "id-123",
    "event_social_action": "share start",
  },
  "component": "ArticleShareOnExpend",
}
`;

exports[`save and share tracking events when press share on facebook: onShareOnFB 1`] = `
Array [
  Array [],
]
`;

exports[`save and share tracking events when press share on twitter 1`] = `
Object {
  "action": "Pressed",
  "attrs": Object {
    "articleHeadline": "test-headline",
    "articleId": "id-123",
    "event_social_action": "share start",
  },
  "component": "ArticleShareOnExpend",
}
`;

exports[`save and share tracking events when press share on twitter: onShareOnTwitter 1`] = `
Array [
  Array [],
]
`;
